--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<i class="icon-remove menu-close"></i>
 			<a href="#home" class="smoothScroll">Home</a>
 			<a href="#about" class="smoothScroll">About</a>
-			<a href="#portfolio" class="smoothScroll">Portfolio</a>
+			<a href="#portfolio" class="smoothScroll">Projects</a>
 			<a href="#contact" class="smoothScroll">Contact</a>
 		</div>
 
