--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 				<div class="col-lg-6 col-lg-offset-3">
           <p>Message me at </p>
-          <p>jhuang@bths.edu </p>
+          <p>jhuang6625@bths.edu </p>
 
 
 				</div>
