--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
 						<div class="carousel-inner">
 							<div class="item active centered">
                 <p class="img-responsive" alt="">
-              <a href="https://drive.google.com/file/d/0B6tBgZkw70sATDNKMUVQUkIxV0E/view?usp=sharing">War of Blue </a> </p>
+              <a href="https://drive.google.com/file/d/0B6tBgZkw70sATDNKMUVQUkIxV0E/view?usp=sharing">War of Blue </a> 
+								<p> Copyright © 2016 - Material published on this website is protected by copyright. You are expressly prohibited from electronically storing any material found here or republishing it by any means.</p>
+								</p>
 
 							</div>
 							<div class="item centered">
