--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 								<p class="img-responsive" alt=""> <a href="https://team334.com"> Robotics Team 334 </a> </p>
 							</div>
 							<div class="item centered">
-								<p class="img-responsive"  alt=""> Coming soon </p>
+								<p class="img-responsive"  alt=""> <a href="https://github.com/thefireblade"> GitHub</a> </p>
 							</div>
 						</div>
 						<br>
