--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<i class="icon-remove menu-close"></i>
 			<a href="#home" class="smoothScroll">Home</a>
 			<a href="#about" class="smoothScroll">About</a>
-			<a href="#portfolio" class="smoothScroll">Projects</a>
+			<a href="#portfolio" class="smoothScroll">WORKS</a>
 			<a href="#contact" class="smoothScroll">Contact</a>
 		</div>
 
@@ -101,7 +101,7 @@
 	<div id="f">
 		<div class="container">
 			<div class="row centered">
-				<h3>PROJECTS</h3>
+				<h3>WORKS</h3>
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
 				<div class="col-lg-6 col-lg-offset-3">
