--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
 
 				<!-- INTRO INFORMATIO-->
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>Born on July 4th 1999, I went to Brooklyn Technical High School in pursuit to become an all-around engineer.</p>
+					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
 					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy manufacturing digital as well as physical works as well as participating in hackathons. </p>
 					<p>My education so far: </p>
+					<p>Brooklyn Technical High School </p>
           <p> Freshman : Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology </p>
           <p> Sophmore: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education </p>
           <p> Junior: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior </p>
