--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 					<p>My education so far: </p>
 					<p>Brooklyn Technical High School </p>
           <p> Freshman : Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology </p>
-          <p> Sophmore: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education </p>
+          <p> Sophomore: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education </p>
           <p> Junior: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior </p>
           <p> Senior: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC </p>
 
