--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
     <title>Jason Huang</title>
 
-    <!-- Bootstrap core CSS -->
+   
     <link href="assets/css/bootstrap.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    
     <link href="assets/css/main.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
 
@@ -23,12 +23,8 @@
 
     <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
       <script src="assets/js/html5shiv.js"></script>
       <script src="assets/js/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body data-spy="scroll" data-offset="0" data-target="#theMenu">
@@ -47,10 +43,6 @@
 		<!-- Menu button -->
 		<div id="menuToggle"><i class="icon-reorder"></i></div>
 	</nav>
-
-
-
-	<!-- ========== HEADER SECTION ========== -->
 	<section id="home" name="home"></section>
 	<div id="headerwrap">
 		<div class="container">
@@ -69,10 +61,6 @@
 			</div>
 		</div><!-- /container -->
 	</div><!-- /headerwrap -->
-
-
-
-	<!-- ========== ABOUT SECTION ========== -->
 	<section id="about" name="about"></section>
 	<div id="f">
 		<div class="container">
@@ -80,7 +68,6 @@
 				<h3>ABOUT ME</h3>
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
-				<!-- INTRO INFORMATIO-->
 				<div class="col-lg-6 col-lg-offset-3">
 					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
 					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy manufacturing digital as well as physical works as well as participating in hackathons. </p>
@@ -96,8 +83,6 @@
 		</div><!-- /container -->
 	</div><!-- /f -->
 
-
-	<!-- ========== CAROUSEL SECTION ========== -->
 	<section id="portfolio" name="portfolio"></section>
 	<div id="f">
 		<div class="container">
@@ -136,7 +121,6 @@
 		</div><!-- container -->
 	</div>	<!-- f -->
 
-	<!-- ========== CONTACT SECTION ========== -->
 	<section id="contact" name="contact"></section>
 	<div id="f">
 		<div class="container">
@@ -156,9 +140,7 @@
 
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Credit to Bootscrap -->
 	<script src="assets/js/classie.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/smoothscroll.js"></script>
