added a more contact information

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
 					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy manufacturing digital as well as physical works as well as participating in hackathons. </p>
 					<p>My education so far: </p>
 					<p>Brooklyn Technical High School </p>
-          <p> Freshman : Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology </p>
-          <p> Sophomore: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education </p>
-          <p> Junior: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior </p>
-          <p> Senior: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC </p>
+          <p> Freshman : Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology 
+          <br> Sophomore: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education
+          <br> Junior: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior 
+          <br> Senior: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC </p>
 
 				</div>
 			</div>
@@ -107,6 +107,8 @@
 							<div class="item centered">
 								<p class="img-responsive"  alt=""> <a href="https://github.com/thefireblade"> GitHub</a> </p>
 							</div>
+							<div class="item centered"> 
+								<p class="img-responsive"  alt=""> <p> Social Media : <p><a href="https://www.facebook.com/Oh.Pwned.XD">Facebook</a>
 						</div>
 						<br>
 						<br>
