--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 						    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 						    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
 						    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+						    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
 						</ol>
 					</div>
 				</div><!-- col-lg-8 -->
