Added more information

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
           <p> Freshman : Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology 
           <br> Sophomore: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education
           <br> Junior: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior 
-          <br> Senior: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC </p>
+          <br> Senior: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC 
+	  <br> Stony Brook University 
+	  <br> computer science   </p>
 
 				</div>
 			</div>
