--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
           <br> Sophomore: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education
           <br> Junior: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior 
           <br> Senior: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC 
-	  <br> Stony Brook University 
-	  <br> computer science   </p>
+	  <br><br> Stony Brook University 
+	  <br> Computer Science Major</p>
 
 				</div>
 			</div>
@@ -135,7 +135,7 @@
 
 				<div class="col-lg-6 col-lg-offset-3">
           <p>Message me at </p>
-          <p>jhuang6625@bths.edu </p>
+          <p>jhuang6625@bths.edu</p>
 
 
 				</div>
