Added Text Formatting

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
 					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy manufacturing digital as well as physical works as well as participating in hackathons. </p>
 					<p>My education so far: </p>
-					<p>Brooklyn Technical High School </p>
-          <p> Freshman : Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology 
-          <br> Sophomore: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education
-          <br> Junior: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior 
-          <br> Senior: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC 
-	  <br><br> Stony Brook University 
-	  <br> Computer Science Major</p>
+					<p><b>Brooklyn Technical High School</b> </p>
+          <p><i> Freshman</i>: Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology 
+          <br><i> Sophomore</i>: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education
+          <br><i> Junior</i>: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior 
+          <br><i> Senior</i>: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC 
+	  <br><br><b>Stony Brook University</b> 
+	  <br>Computer Science Major</p>
 
 				</div>
 			</div>
