Fix font test 2

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-	col-lg-6 col-lg-offset-3{
+	.col-lg-6 col-lg-offset-3{
 	font-size: 14px;
 	}
 </style>
