Fix font test 3

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <style>
-	.col-lg-6 col-lg-offset-3{
+	.Font1{
 	font-size: 14px;
 	}
 </style>
@@ -74,6 +74,7 @@
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
 				<div class="col-lg-6 col-lg-offset-3">
+				<div class="Font1">
 					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
 					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy manufacturing digital as well as physical works as well as participating in hackathons. </p>
 					<p>My education so far: </p>
@@ -84,6 +85,7 @@
           <br><i> Senior</i>: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC 
 	  <br><br><b>Stony Brook University</b> 
 	  <br>Computer Science Major</p>
+				</div>
 
 				</div>
 			</div>
