Change Fix Test 2

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
 				<div class="col-lg-6 col-lg-offset-3">
-				<div class="Font1">
+				<div style="font-size=14px;">
 					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
 					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy manufacturing digital as well as physical works as well as participating in hackathons. </p>
 					<p>My education so far: </p>
