--- a/index.html
+++ b/index.html
@@ -69,18 +69,17 @@
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
 				<div class="col-lg-6 col-lg-offset-3">
-				<div style="font-size=14px;">
 					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
 					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy manufacturing digital as well as physical works as well as participating in hackathons. </p>
 					<p>My education so far: </p>
 					<p><b>Brooklyn Technical High School</b> </p>
-          <p><i> Freshman</i>: Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology 
-          <br><i> Sophomore</i>: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education
-          <br><i> Junior</i>: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior 
-          <br><i> Senior</i>: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC 
+          <p><b> Freshman</b>: Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology 
+          <br><b> Sophomore</b>: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education
+          <br><b> Junior</b>: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior 
+          <br><b> Senior</b>: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC 
 	  <br><br><b>Stony Brook University</b> 
 	  <br>Computer Science Major</p>
-				</div>
+				
 
 				</div>
 			</div>
