--- a/index.html
+++ b/index.html
@@ -70,15 +70,12 @@
 
 				<div class="col-lg-6 col-lg-offset-3">
 					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
-					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy manufacturing digital as well as physical works as well as participating in hackathons. </p>
-					<p>My education so far: </p>
-					<p><b>Brooklyn Technical High School</b> </p>
-          <p><b> Freshman</b>: Design and Drafting Principles; Geometry; English; Chinese I; Global History; Biology 
-          <br><b> Sophomore</b>: Digital Electronics; Trigonometry; AP European History; Chinese II; English Soph; Chemistry; Health Education
-          <br><b> Junior</b>: Digital System Design; AP Statistics;  AP US History; AP Physics I; AP Computer Science Principles; Pre-Calculus; English Junior 
-          <br><b> Senior</b>: Computer Integrated Manufacturing; AP Physics II; AP Economics; Journalism; AP Calculus BC 
-	  <br><br><b>Stony Brook University</b> 
-	  <br>Computer Science Major</p>
+					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy creating digital content as well as physical models and have a hobby of participating in hackathons. </p>
+					<p>Snap Programming ProjectM<p> 
+					<p><a href = "https://drive.google.com/open?id=1rvYzL0nw6WFLE68IgwD1nFYviCBhQR2i" > My education so far: </a></p>
+					<p><b>Brooklyn Technical High School</b> </p> 
+					<p><b>Stony Brook University</b> </p>
+					<p><br>Computer Science B.S. & Applied Mathematics and Statistics B.S.</p>
 				
 
 				</div>
