--- a/index.html
+++ b/index.html
@@ -70,12 +70,13 @@
 
 				<div class="col-lg-6 col-lg-offset-3">
 					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
-					<p>My hobbies include solving casual challenging math problems as well as competitive gaming. I also enjoy creating digital content as well as physical models and have a hobby of participating in hackathons. </p>
-					<p>Snap Programming ProjectM<p> 
+					<p>My hobbies include solving casual challenging math problems as well as esports. I also enjoy creating digital content as well as physical models and have a hobby of participating in hackathons. </p>
+					<p>Snap Programming ProjectM</p> 
 					<p><a href = "https://drive.google.com/open?id=1rvYzL0nw6WFLE68IgwD1nFYviCBhQR2i" > My education so far: </a></p>
 					<p><b>Brooklyn Technical High School</b> </p> 
 					<p><b>Stony Brook University</b> </p>
-					<p><br>Computer Science B.S. & Applied Mathematics and Statistics B.S.</p>
+					<p>Computer Science B.S. </p>
+					<p>Applied Mathematics and Statistics B.S.</p>
 				
 
 				</div>
