--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 				<div class="col-lg-6 col-lg-offset-3">
 					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
 					<p>My hobbies include solving casual challenging math problems as well as esports. I also enjoy creating digital content as well as physical models and have a hobby of participating in hackathons. </p>
-					<p>Snap Programming ProjectM</p> 
-					<p><a href = "https://drive.google.com/open?id=1rvYzL0nw6WFLE68IgwD1nFYviCBhQR2i" > My education so far: </a></p>
+					<p><a href = "https://drive.google.com/open?id=1rvYzL0nw6WFLE68IgwD1nFYviCBhQR2i" >Snap Programming Project</a></p> 
+					<p>My education so far:</p>
 					<p><b>Brooklyn Technical High School</b> </p> 
 					<p><b>Stony Brook University</b> </p>
 					<p>Computer Science B.S. </p>
