--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 				<div class="col-lg-6 col-lg-offset-3">
           <p>Message me at </p>
-          <p>jhuang6625@bths.edu</p>
+          <p>jason.huang.2@stonybrook.edu</p>
 
 
 				</div>
