--- a/index.html
+++ b/index.html
@@ -69,11 +69,12 @@
 				<p class="centered"><i class="icon icon-circle"></i><i class="icon icon-circle"></i><i class="icon icon-circle"></i></p>
 
 				<div class="col-lg-6 col-lg-offset-3">
-					<p>Born on July 4th 1999, I grew up dreaming to become an all-around engineer.</p>
-					<p>My hobbies include solving casual challenging math problems as well as esports. I also enjoy creating digital content as well as physical models and have a hobby of participating in hackathons. </p>
-					<p><a href = "https://drive.google.com/open?id=1rvYzL0nw6WFLE68IgwD1nFYviCBhQR2i" >Snap Programming Project</a></p> 
+					<p>I am currently a rising sophomore in the Stony Brook Honors Program and am double majoring in Applied Mathematics and Statistics.</p>
+					<p>I love to build computers, actively participate in robotics, and solve the rubik's cube. I am actively looking for a job and have skills ranging from databases to web development. Please contact me if you are interested!</p>
+					<p><a href = "https://drive.google.com/drive/folders/18labmT5l46rlmC5tEd8uIyhqewYJJXzg?usp=sharing" >Consolemons Project</a></p> 
 					<p>My education so far:</p>
 					<p><b>Brooklyn Technical High School</b> </p> 
+					<p> Electrical Engineering </p>
 					<p><b>Stony Brook University</b> </p>
 					<p>Computer Science B.S. </p>
 					<p>Applied Mathematics and Statistics B.S.</p>
