--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<p class="img-responsive"  alt=""> <a href="https://github.com/thefireblade"> GitHub</a> </p>
 							</div>
 							<div class="item centered"> 
-								<p class="img-responsive"  alt=""><b>Social Media<b><br><a href="https://www.facebook.com/Oh.Pwned.XD">Facebook</a> </p>
+								<p class="img-responsive"  alt=""><b>Social Media<b><br><a href="https://www.facebook.com/JasonNeedsAJobDotCom">Facebook</a> </p>
 						</div>
 						<br>
 						<br>
